<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:paddingHorizontal="24dp">

    <ImageView
        android:id="@+id/ivMovieItemPoster"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:contentDescription="@string/moviePoster"
        android:scaleType="centerCrop"
        android:src="@drawable/sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMovieItemTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dummyMovieTitle"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivMovieItemPoster"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMovieItemRating"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dummyMovieRating"
        app:layout_constraintStart_toStartOf="@+id/tvMovieItemTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieItemTitle"
        tools:src="@drawable/ic_rating_0" />

    <TextView
        android:id="@+id/tvMovieItemRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivMovieItemRating"
        app:layout_constraintStart_toEndOf="@+id/ivMovieItemRating"
        app:layout_constraintTop_toTopOf="@+id/ivMovieItemRating"
        tools:text="@string/movieRating" />

    <TextView
        android:id="@+id/tvMovieItemOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="4"
        app:layout_constraintEnd_toEndOf="@+id/tvMovieItemTitle"
        app:layout_constraintStart_toStartOf="@+id/tvMovieItemTitle"
        app:layout_constraintTop_toBottomOf="@+id/ivMovieItemRating"
        tools:text="@string/dummyMovieOverview" />

</androidx.constraintlayout.widget.ConstraintLayout>