<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="4dp">

    <ImageView
        android:id="@+id/ivCastProfile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/cast"
        android:src="@drawable/ic_profile_black_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_cast_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dummyCast"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/space2"
        app:layout_constraintStart_toEndOf="@+id/ivCastProfile" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivCastProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_cast_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dummyRole"
        app:layout_constraintStart_toEndOf="@+id/ivCastProfile"
        app:layout_constraintTop_toBottomOf="@+id/space2" />
</androidx.constraintlayout.widget.ConstraintLayout>