<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="140dp"
    android:layout_height="240dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/moviePoster"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/sample" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvMovieItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:background="@color/black"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/dummyMovieTitle" />

            <TextView
                android:id="@+id/tvMovieItemRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivMovieRating"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieItemTitle"
                tools:ignore="TextContrastCheck"
                tools:text="@string/dummyMovieRating" />

            <ImageView
                android:id="@+id/ivMovieRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/movieRating"
                app:layout_constraintEnd_toStartOf="@+id/tvMovieItemRating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieItemTitle"
                tools:src="@drawable/ic_rating_0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!--    <LinearLayout-->
    <!--        android:id="@+id/linearLayout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="8dp"-->
    <!--        android:gravity="center_vertical"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/cardView"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/cardView"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/cardView"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.0"-->
    <!--        tools:ignore="UseCompoundDrawables"-->
    <!--        tools:viewBindingIgnore="true">-->

    <!--        -->

    <!--    </LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>